--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,17 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   firebase_core: ^1.2.1
   firebase_auth: ^1.3.0
+  dio: ^4.0.0
+  provider: ^5.0.0
+  json_annotation: ^4.0.1
+  json_serializable: ^4.1.2
+  another_flushbar: ^1.10.20
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
