--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   json_annotation: ^4.0.1
   json_serializable: ^4.1.2
   another_flushbar: ^1.10.20
-  
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +56,14 @@ flutter:
     - images/splash.jpg
     - images/logo.png
     - images/background.jpeg
+    - images/agri.png
+    - images/e-waste.png
+    - images/bio-waste.png
+    - images/plas.png
+    - images/e.png
+    - images/dyk.png
+    - images/pickup.png
+    - images/logoNamaste.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
